--- a/JavaScript/HTML_CSS/style.css
+++ b/JavaScript/HTML_CSS/style.css
@@ -1,15 +1,25 @@
+*{
+    padding : 0 ;
+    margin: 0;
+}
 body {
   background-color: rgb(10, 184, 190);
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 .heading1 {
   color: darkblue;
+  padding-top: 25px;
+  padding-bottom: 25px;
 }
 .heading2 {
   color: maroon;
 }
 #your-name {
   background-color: rgb(238, 71, 10);
-
+  width: 400px;
   border : 2px solid
+}
+
+button,input{
+  color: darkorchid;
 }
