--- a/JavaScript/Guess My Number/style.css
+++ b/JavaScript/Guess My Number/style.css
@@ -14,7 +14,7 @@ html {
 body {
   font-family: 'Press Start 2P', sans-serif;
   color: rgb(255, 255, 255);
-  background-color:black;
+  background-color:rgb(0, 0, 0);
   /* background-color: #60b347; */
 }
 
